deployment/k8s/dev/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    app.kubernetes.io/part-of: infinitecareers-platform
